--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                    Happy Birthday, Haifa! 🎂💖, I wish you a day filled with laughter, love, and everything your heart desires. You deserve all the wonderful things life has to offer. You make my world brighter every single day with your kindness and warmth, and I am so incredibly grateful for you. Here to celebrating you today and every day, and to many more beautiful years together. I love you more than words can say! 🐣💛
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">can't wait to celebrate with you! ;)</h5>
             </div>
         </div>
 
